Fixed navigation between home, about and projects pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div id="header">
     <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#FAQ">FAQ</a></li>
     </ul>
@@ -41,6 +41,7 @@
 </div>
 <div id="footer">
     <h2>Get in Contact</h2>
+    <h3>Footer under service- This is only a sample form</h3>
     <form>
         <input type="text" placeholder="Name:">
     </br>
