--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <div id="header">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#FAQ">FAQ</a></li>
-        </ul>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#FAQ">FAQ</a></li>
+    </ul>
     </div>
     <div id="content">
+      <div id="projects">
         <h1>Projects</h1>
         <div id="projects-container">
             <div class="geosynthetics projects-child">
@@ -47,6 +48,7 @@
                 </div>                
             </div>
         </div>
+      </div>
     </div>
     <div id="footer">
         <h2>Get in Contact</h2>
