--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
 <body>
     <div id="header">
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#FAQ">FAQ</a></li>
         </ul>
