--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="header">
+    <span class="nav-icon" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     <ul>
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -17,6 +18,16 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="FAQ.html">FAQ</a></li>
     </ul>
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a class="active" href="#home">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="services.html">Services</a>
+            <a href="FAQ.html">FAQ</a>
+        </div>
+      </div>
 </div>
 <div id="content">
     <div id="home">
@@ -74,5 +85,6 @@
 //document.body.onclick = typeWriter;
 typeWriter();
 </script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
