--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <div id="header">
         <span class="nav-icon" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a class="active" href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
