Hyperlinked the whole button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="home">
         <h1>Supply Matters</h1>
         <h2 id="animated-subtitle"></h2>
-        <button><a href="FAQ.html">Contact Us Now</a></button>
+        <a href="FAQ.html"><button>Contact Us Now</button></a>
     </div>
     <div id="description">
         <div class="sourcing description-element">
