--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div id="description">
         <div class="sourcing description-element">
-            <h2>Sourcing & Purchasing</h2>
+            <h2>Sourcing & Purchasings</h2>
             <p>Building materials including timber, timber flooring; plywood, gypsum board, doors, door frames, cables, M&E and FF&E items for projects.</p>
         </div>
         <div class="consolidation description-element">
