--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   <div id="header">
     <span class="nav-icon" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a class="active" href="projects.html">Projects</a></li>
         <li><a href="services.html">Services</a></li>
