Changed font to Didact Gothic

--- a/services.html
+++ b/services.html
@@ -27,7 +27,8 @@
                 <a href="FAQ.html">FAQ</a>
             </div>
           </div>
-    </div>    <div id="content">
+    </div>    
+    <div id="content">
         <div id="services">
             <h1>Our Services</h1>
         <div class="slideshow-container">
